--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^7.0.5"
   },
   "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
